--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         quote: 'If you want to lay the best foundation possible I’d recommend taking this course. The depth the instructors go into is incredible. I now feel so confident about starting up as a professional developer.',
       },
     ]
-  }">
+  }"
+    @keyup.left.window="activeSlide = activeSlide === 0 ? slides.length - 1 : activeSlide - 1"
+    @keyup.right.window="activeSlide = activeSlide === slides.length - 1 ? 0 : activeSlide + 1">
     <main class="container">
       <div class="testimonials">
         <ul class="testimonial__list">
