Add width and height attributes to image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <template x-for="(slide, index) in slides" :key="index">
             <li x-show="activeSlide === index" class="testimonial__item">
               <div class="testimonial__image">
-                <img src="images/image-tanya.jpg" :src="slide.image" alt="tanja">
+                <img src="images/image-tanya.jpg" :src="slide.image" alt="tanja" width="540" height="540">
               </div>
               
               <div class="testimonial__body">
