Add subtle animation to the text

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
               </div>
               
               <div class="testimonial__body">
-                <blockquote class="testimonial__quote">
+                <blockquote class="testimonial__quote fade-1">
                   <p>&ldquo; <span x-text="slide.quote"></span> &rdquo;</p>
                 </blockquote>
 
-                <p class="testimonial__author">
+                <p class="testimonial__author fade-2">
                   <strong x-text="slide.name"></strong> <span x-text="slide.position"></span>
                 </p>
               </div>
