--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     @keyup.left.window="activeSlide = activeSlide === 0 ? slides.length - 1 : activeSlide - 1"
     @keyup.right.window="activeSlide = activeSlide === slides.length - 1 ? 0 : activeSlide + 1">
     <main class="container">
+      <h1 class="sr-only">Coding bootcamp testimonials slider</h1>
       <div class="testimonials">
         <ul class="testimonial__list">
           <!-- Slides -->
